fix pagination, create form